<resources>
    <string name="app_name">Jae Nwawe CoffeeTime</string>
    <string name="java_quantity">Quantity</string>
    <string name="order_quantity">0</string>
    <string name="button_order">order</string>

    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="action_settings">Settings</string>
    <string name="text_order">Order</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
