<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.DifferentLayout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/java_quantity"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:paddingRight="8dp"
                android:paddingTop="16sp"
                android:text="@string/text_minus"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content"
                android:text="@string/order_quantity"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:paddingLeft="8dp"
                android:text="@string/text_plus"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/prices_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:text="price"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16sp"
            android:text="$0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:paddingTop="16sp"
            android:textAllCaps="true"
            android:text="@string/text_order"
            android:textColor="#000000" />


    </LinearLayout>

</FrameLayout>
